tests/ui/attributes/export/exportable.stderr
error: private items are not exportable
  --> $DIR/exportable.rs:10:5
   |
LL |     pub struct S;
   |     ^^^^^^^^^^^^
   |
note: is only usable at visibility `pub(crate)`
  --> $DIR/exportable.rs:10:5
   |
LL |     pub struct S;
   |     ^^^^^^^^^^^^

error: private items are not exportable
  --> $DIR/exportable.rs:120:5
   |
LL |     enum E {
   |     ^^^^^^
   |
note: is only usable at visibility `pub(self)`
  --> $DIR/exportable.rs:120:5
   |
LL |     enum E {
   |     ^^^^^^

error: trait's are not exportable
  --> $DIR/exportable.rs:128:5
   |
LL |     pub trait Trait {}
   |     ^^^^^^^^^^^^^^^

error: constant's are not exportable
  --> $DIR/exportable.rs:132:5
   |
LL |     pub const C: i32 = 0;
   |     ^^^^^^^^^^^^^^^^

error: Only `extern "C"` functions are exportable
  --> $DIR/exportable.rs:13:5
   |
LL |     pub fn foo() {}
   |     ^^^^^^^^^^^^

error: types with unstable layout are not exportable
  --> $DIR/exportable.rs:27:5
   |
LL |     pub struct S3;
   |     ^^^^^^^^^^^^^

error: Only `extern "C"` functions are exportable
  --> $DIR/exportable.rs:33:5
   |
LL |     pub fn foo1() {}
   |     ^^^^^^^^^^^^^

error: function with `#[export]` attribute uses type `Box<fn_sig::S>`, which is not exportable
  --> $DIR/exportable.rs:44:5
   |
LL |     pub extern "C" fn foo3(x: Box<S>) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^------^
   |                               |
   |                               not exportable

error: method with `#[export]` attribute uses type `&impl_item::S`, which is not exportable
  --> $DIR/exportable.rs:53:9
   |
LL |         pub extern "C" fn foo1(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^-----^
   |                                |
   |                                not exportable

error: method with `#[export]` attribute uses type `impl_item::S`, which is not exportable
  --> $DIR/exportable.rs:57:9
   |
LL |         pub extern "C" fn foo2(self) {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^----^
   |                                |
   |                                not exportable

error: generic method's are not exportable
  --> $DIR/exportable.rs:65:9
   |
LL |         pub extern "C" fn foo1(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: function with `#[export]` attribute uses type `(u32,)`, which is not exportable
  --> $DIR/exportable.rs:81:5
   |
LL |     pub extern "C" fn foo1(x: <S as Trait>::Type) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^------------------^
   |                               |
   |                               not exportable

error: type alias with `#[export]` attribute uses type `[i32; 4]`, which is not exportable
  --> $DIR/exportable.rs:85:5
   |
LL |     pub type Type = [i32; 4];
   |     ^^^^^^^^^^^^^ not exportable

error: associated type with `#[export]` attribute uses type `extern "C" fn()`, which is not exportable
  --> $DIR/exportable.rs:90:9
   |
LL |         pub type Type = extern "C" fn();
   |         ^^^^^^^^^^^^^ not exportable

error: struct with `#[export]` attribute uses type `tys::S1`, which is not exportable
  --> $DIR/exportable.rs:98:5
   |
LL |     pub struct S2 {
   |     ^^^^^^^^^^^^^ not exportable

error: ADT types with private fields are not exportable
  --> $DIR/exportable.rs:113:5
   |
LL |     pub struct S2 {
   |     ^^^^^^^^^^^^^
   |
note: `x` is private
  --> $DIR/exportable.rs:115:9
   |
LL |         x: i32
   |         ^^^^^^

error: aborting due to 16 previous errors

